# vitransformer

./: .gitignore  .pre-commit-config.yaml  mypy.ini  pyproject.toml  tox.ini
notebooks/: CIFAR10.ipynb  ImageNet.ipynb  ResNet.ipynb  Transformer.ipynb  ViT.ipynb
tests/: test_vitransformer.py
vitransformer/: constants.py  layers.py  lightning.py  transformer.py
vitransformer/layers/: attention.py  drop_path.py  patch_embedding.py
