[tool.poetry]
name = "ViTransformer"
version = "0.1.0"
description = ""
authors = ["dima <dima@theoracleai.com>"]

[tool.poetry.dependencies]
python = ">=3.8,<3.10"
numpy = "^1.21.1"
scipy = "^1.7.0"
matplotlib = "^3.4.2"
tqdm = "^4.61.2"
torch = "^1.9.0"
pytorch-lightning = "^1.3.8"
requests = "^2.26.0"
einops = "^0.3.0"
tensorboard = "^2.4.1"
pandas = "^1.3.1"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
jupyter = "^1.0.0"
black = "^21.7b0"
flake8 = "^3.9.2"
isort = "^5.9.2"
mypy = "^0.910"
pre-commit = "^2.13.0"
poethepoet = "^0.10.0"
jupyter-contrib-nbextensions = "^0.5.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
